--- a/src/components/game/game.module.css
+++ b/src/components/game/game.module.css
@@ -354,6 +354,74 @@
   z-index: 5;
 }
 
+.fall1 {
+  animation: fall1 0.2s ease-in;
+}
+.fall2 {
+  animation: fall2 0.2s ease-in;
+}
+.fall3 {
+  animation: fall3 0.3s ease-in;
+}
+.fall4 {
+  animation: fall4 0.3s ease-in;
+}
+.fall5 {
+  animation: fall5 0.4s ease-in;
+}
+.fall6 {
+  animation: fall6 0.4s ease-in;
+}
+
+@keyframes fall1 {
+  0% {
+    transform: translateY(calc(-100% * 1));
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
+@keyframes fall2 {
+  0% {
+    transform: translateY(calc(-100% * 2));
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
+@keyframes fall3 {
+  0% {
+    transform: translateY(calc(-100% * 3));
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
+@keyframes fall4 {
+  0% {
+    transform: translateY(calc(-100% * 4));
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
+@keyframes fall5 {
+  0% {
+    transform: translateY(calc(-100% * 5));
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
+@keyframes fall6 {
+  0% {
+    transform: translateY(calc(-100% * 6));
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
+
 @media only screen and (max-width: 1100px) {
   .gameButtons {
     width: 100%;
